Option3 and Time of Max widths required

--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
@@ -41,9 +41,9 @@
     "    carpark_grouping = {}\n",
     "    carpark_population = {}\n",
     "\n",
-    "def readRouteTable(metro):\n",
+    "def readRouteTable(metro,option):\n",
     "    #Route table initialization\n",
-    "    with open(f'UptownInputs/roadCalcs_routeTable_{metro}.csv', 'r') as csvfile:\n",
+    "    with open(f'UptownInputs/roadCalcs_routeTable_{option}_{metro}.csv', 'r') as csvfile:\n",
     "        reader = csv.reader(csvfile)\n",
     "        for row in reader:\n",
     "            profileId = row[0]\n",
@@ -220,38 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5f05bcab",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'routeTable' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(routeTable) \u001b[38;5;66;03m#node paths\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(roadLengthTable)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(arrivalTime)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'routeTable' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(routeTable) #node paths\n",
-    "print(roadLengthTable)\n",
-    "print(arrivalTime)\n",
-    "print(departuresProfile)\n",
-    "print(arrivalProfile)"
+    "# print(routeTable) #node paths\n",
+    "# print(roadLengthTable)\n",
+    "# print(arrivalTime)\n",
+    "# print(departuresProfile)\n",
+    "# print(arrivalProfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "80a9c698-a605-4c2d-b2a1-7ac283cbed22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def runScenario(metro,scenario):\n",
+    "def runScenario(metro,scenario,route):\n",
     "    startingTime = 0*3600 #7pm in seconds\n",
     "    #simulate arrival time of people coming in a lift and moving through from one to the next and calculate occupancy of each node over time\n",
     "    simulationTime = 86400+startingTime #seconds\n",
@@ -379,7 +367,7 @@
     "# Get headers from one of the inner dictionaries\n",
     "    fieldnames = ['time'] + list(next(iter(nodeOccupancies.values())).keys())\n",
     "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_OccupancyOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
+    "    with open(f'UptownOutputs/{metro}/{route}/roadCalcs_OccupancyOutput_{scenario}_{route}.csv', 'w', newline='') as csvfile:\n",
     "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "        writer.writeheader()\n",
     "        for time, node_values in nodeOccupancies.items():\n",
@@ -387,7 +375,7 @@
     "            row.update(node_values)\n",
     "            writer.writerow(row)\n",
     "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_PeopleCountOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
+    "    with open(f'UptownOutputs/{metro}/{route}/roadCalcs_PeopleCountOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
     "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "        writer.writeheader()\n",
     "        for time, node_values in nodePeopleCount.items():\n",
@@ -395,14 +383,14 @@
     "            row.update(node_values)\n",
     "            writer.writerow(row)\n",
     "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_FlowRateOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
+    "    with open(f'UptownOutputs/{metro}/{route}/roadCalcs_FlowRateOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
     "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "        writer.writeheader()\n",
     "        for time, node_values in nodeFlowRate.items():\n",
     "            row = {'time': time}\n",
     "            row.update(node_values)\n",
     "            writer.writerow(row)\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_WidthFlowRequiredOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
+    "    with open(f'UptownOutputs/{metro}/{route}/roadCalcs_WidthFlowRequiredOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
     "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "        writer.writeheader()\n",
     "        for time, node_values in nodeWidthFlowRequired.items():\n",
@@ -413,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a8a0640c-a589-4afc-954f-ad7909e3257a",
    "metadata": {},
    "outputs": [],
@@ -423,26 +411,28 @@
     "    scenarioList = ['OlympicsT']\n",
     "    # metroList = ['pre','post']\n",
     "    metroList = ['pre']\n",
-    "    for metro in metroList:\n",
-    "        for scenario in scenarioList:\n",
-    "            print(f\"Running scenario {scenario} for metro {metro}\")\n",
-    "            resetParams()\n",
-    "            readRouteTable(metro)\n",
-    "            readRoadLengthTable()\n",
-    "            readArrivalTime(scenario)\n",
-    "            readArrivalDepartureProfile(scenario)\n",
-    "            readArrivalArrivalProfile(scenario)\n",
+    "    routeOption = ['option3']\n",
+    "    for route in routeOption:\n",
+    "        for metro in metroList:\n",
+    "            for scenario in scenarioList:\n",
+    "                print(f\"Running scenario {scenario} for metro {metro} and route {route}\")\n",
+    "                resetParams()\n",
+    "                readRouteTable(metro,route)\n",
+    "                readRoadLengthTable()\n",
+    "                readArrivalTime(scenario)\n",
+    "                readArrivalDepartureProfile(scenario)\n",
+    "                readArrivalArrivalProfile(scenario)\n",
     "\n",
-    "            readCarParkGrouping()\n",
-    "            readCarParkPopulation()\n",
-    "            removeCarparkPopulationFromArrivalTime()\n",
+    "                readCarParkGrouping()\n",
+    "                readCarParkPopulation()\n",
+    "                removeCarparkPopulationFromArrivalTime()\n",
     "\n",
-    "            runScenario(metro,scenario)"
+    "                runScenario(metro,scenario,route)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "18e5dea6",
    "metadata": {},
    "outputs": [
@@ -450,8 +440,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running scenario OlympicsT for metro pre\n",
-      "{'Orange': 7500, 'Blue': 5000, 'Green': 2500, 'Purple': 2500, 'Gray': 0}\n"
+      "Running scenario OlympicsT for metro pre and route option3\n",
+      "{'Orange': 7500, 'Blue': 3600, 'Green': 2250, 'Purple': 639, 'Gray': 0}\n"
      ]
     }
    ],
@@ -461,36 +451,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "4b86983f",
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'UptownOutputs'\n",
     "subfolders = ['pre','post']\n",
+    "subsubfolders = ['option3']\n",
     "prefix = 'roadCalcs_WidthFlowRequiredOutput_' \n",
+    "dataOutputs = ['maxWidths','timeOfMaxWidths']\n",
+    "def processIndexToTime(number):\n",
+    "    if number == 0:\n",
+    "        return 'N/A'\n",
+    "    hour = math.floor(number / 3600)\n",
+    "    return f'{hour+7}:00'\n",
+    "for dataOutput in dataOutputs:\n",
+    "    for subsub in subsubfolders:\n",
+    "        for subfolder in subfolders:\n",
+    "            all_dfs = []\n",
     "\n",
+    "            subfolder_path = os.path.join(folder_path,subfolder,subsub)\n",
+    "            if os.path.isdir(subfolder_path):\n",
+    "                for filename in os.listdir(subfolder_path):\n",
+    "                    if filename.startswith(prefix):\n",
+    "                        file_path = os.path.join(subfolder_path, filename)\n",
     "\n",
-    "for subfolder in subfolders:\n",
-    "    all_dfs = []\n",
+    "                        df = pd.read_csv(file_path)\n",
+    "                        df.drop(columns=['time','end'], axis=1, inplace=True)\n",
+    "                        # Optionally track which file each row came from\n",
+    "                        \n",
+    "                        if dataOutput == 'maxWidths':\n",
+    "                            max_values = df.max(numeric_only=True)\n",
+    "                        else:\n",
+    "                            max_indices = df.idxmax(numeric_only=True)\n",
+    "                            max_values = max_indices.apply(processIndexToTime)\n",
     "\n",
-    "    subfolder_path = os.path.join(folder_path, subfolder)\n",
-    "    if os.path.isdir(subfolder_path):\n",
-    "        for filename in os.listdir(subfolder_path):\n",
-    "            if filename.startswith(prefix):\n",
-    "                file_path = os.path.join(subfolder_path, filename)\n",
+    "                        max_values['scenario'] = filename.split('_')[-1].split('.')[0] + '_' +subfolder+ '_' + subsub\n",
+    "                        all_dfs.append(max_values)\n",
+    "                        \n",
     "\n",
-    "                df = pd.read_csv(file_path)\n",
-    "                df.drop(columns=['time','end'], axis=1, inplace=True)\n",
-    "                  # Optionally track which file each row came from\n",
-    "                max_values = df.max(numeric_only=True)\n",
-    "                max_values['scenario'] = filename.split('_')[-1].split('.')[0] + '_' +subfolder\n",
-    "                all_dfs.append(max_values)\n",
-    "                \n",
-    "\n",
-    "# Combine all data into a single DataFrame\n",
-    "    combined_df = pd.DataFrame(all_dfs,index=None)\n",
-    "    combined_df.to_csv(f'{folder_path}/maxWidths{subfolder}.csv', index=False)"
+    "        # Combine all data into a single DataFrame\n",
+    "            combined_df = pd.DataFrame(all_dfs,index=None)\n",
+    "            combined_df.to_csv(f'{folder_path}/maxWidths_{subfolder}_{subsub}_{dataOutput}.csv', index=False)"
    ]
   },
   {
