updating parallel computing

--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c2f85640",
    "metadata": {},
    "outputs": [],
@@ -160,8 +160,7 @@
     "    for profileId in arrivalTime:\n",
     "        group = carpark_grouping[profileId] if profileId in carpark_grouping else None\n",
     "        popToRemove = math.floor(arrivalTime[profileId]['population']/groupTotal[group] * carpark_population[group]) if group and group in groupTotal and groupTotal[group]>0 else 0\n",
-    "        arrivalTime[profileId]['population'] -= popToRemove\n",
-    "    \n"
+    "        arrivalTime[profileId]['population'] -= popToRemove"
    ]
   },
   {
