--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic_windows.ipynb
@@ -106,7 +106,12 @@
     "                'population': population,\n",
     "                'time': time\n",
     "            }\n",
-    "\n",
+    "def pctFormatter(pct):\n",
+    "    try:\n",
+    "        return abs(float(pct))\n",
+    "    except:\n",
+    "        return abs(float(str(pct.split('%')[0])))/100\n",
+    "    \n",
     "def readArrivalDepartureProfile(scenario):\n",
     "#arrival profile\n",
     "    with open(f'UptownInputs/roadCalcs_arrivalProfile_departures_{scenario}.csv', 'r') as csvfile:\n",
@@ -115,18 +120,12 @@
     "        headers = data[0]\n",
     "        arrivalData = data[1:]\n",
     "\n",
-    "        def pctFormatter(pct):\n",
-    "            try:\n",
-    "                return abs(float(pct))\n",
-    "            except:\n",
-    "                return abs(float(str(pct.split('%')[0])))/100\n",
-    "\n",
     "        for row in arrivalData:\n",
     "            profileId = row[0]\n",
     "            timeProfile = row[2:]\n",
     "            departuresProfile[profileId] = {}\n",
     "            for idx,pct in enumerate(timeProfile):\n",
-    "                departuresProfile[profileId][(idx*3600)] = 0 if pct == '' else pctFormatter(pct)\n",
+    "                departuresProfile[profileId][(idx*3600)] = 0 if (pct == '' or '-' in pct) else pctFormatter(pct)\n",
     "\n",
     "\n",
     "def readArrivalArrivalProfile(scenario):\n",
@@ -137,18 +136,14 @@
     "        headers = data[0]\n",
     "        arrivalData = data[1:]\n",
     "\n",
-    "        def pctFormatter(pct):\n",
-    "            try:\n",
-    "                return abs(float(pct))\n",
-    "            except:\n",
-    "                return abs(float(str(pct.split('%')[0])))/100\n",
+    "\n",
     "\n",
     "        for row in arrivalData:\n",
     "            profileId = row[0]\n",
     "            timeProfile = row[2:]\n",
     "            arrivalProfile[profileId] = {}\n",
     "            for idx,pct in enumerate(timeProfile):\n",
-    "                arrivalProfile[profileId][(idx*3600)] = 0 if pct == '' else pctFormatter(pct)\n",
+    "                arrivalProfile[profileId][(idx*3600)] = 0 if (pct == '' or '-' in pct) else pctFormatter(pct)\n",
     "\n",
     "def removeCarparkPopulationFromArrivalTime():\n",
     "    groupTotal = {}\n",
